# fortran-utils

./: .gitignore
src/: CMakeLists.txt  interpolation.f90  special.f90  trash.f90
src/legacy/: CMakeLists.txt  special.f
src/legacy/amos/: CMakeLists.txt
tests/interpolation/: CMakeLists.txt  test_lagrangecoeff  test_lagrangecoeff.f90
tests/ppm/: tmp2.ppm
